[gd_scene load_steps=11 format=2]

[ext_resource path="res://npc/cow/sprites/vaca.png" type="Texture" id=1]
[ext_resource path="res://npc/cow/Cow.gd" type="Script" id=2]
[ext_resource path="res://data/player_stats/Cow.tres" type="Resource" id=3]
[ext_resource path="res://npc/cow/WanderController.tscn" type="PackedScene" id=4]
[ext_resource path="res://npc/cow/StateMachine.gd" type="Script" id=5]
[ext_resource path="res://npc/cow/Wander.gd" type="Script" id=6]
[ext_resource path="res://npc/cow/Idle.gd" type="Script" id=7]
[ext_resource path="res://npc/cow/Picking.gd" type="Script" id=8]

[sub_resource type="CapsuleShape2D" id=1]
height = 10.0

[sub_resource type="CircleShape2D" id=2]
radius = 20.025

[node name="Cow" type="KinematicBody2D" groups=[
"cow",
]]
collision_layer = 16
collision_mask = 8
script = ExtResource( 2 )
__meta__ = {
"_edit_group_": true
}
cow = ExtResource( 3 )

[node name="StateMachine" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Wander" type="Node" parent="StateMachine"]
script = ExtResource( 6 )
wander_timer = NodePath("../../Timers/WanderTimer")
wander_controller = NodePath("../../WanderController")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource( 7 )
idle_timer = NodePath("../../Timers/IdleTimer")

[node name="Picking" type="Node" parent="StateMachine"]
script = ExtResource( 8 )

[node name="Timers" type="Node" parent="."]

[node name="PickupTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="WanderTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="IdleTimer" type="Timer" parent="Timers"]
one_shot = true

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, 3 )
rotation = 1.5708
shape = SubResource( 1 )

[node name="Label" type="Label" parent="."]
margin_left = -50.0
margin_top = -58.0
margin_right = 50.0
margin_bottom = -27.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerDetectionArea" type="Area2D" parent="." groups=[
"cow",
]]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="PlayerDetectionArea"]
shape = SubResource( 2 )

[node name="WanderController" parent="." instance=ExtResource( 4 )]

[connection signal="timeout" from="Timers/PickupTimer" to="." method="_on_PickupTimer_timeout"]
[connection signal="body_entered" from="PlayerDetectionArea" to="." method="_on_PlayerDetectionArea_body_entered"]
[connection signal="body_exited" from="PlayerDetectionArea" to="." method="_on_PlayerDetectionArea_body_exited"]
